Readded lazyload and fixed code whitespace

--- a/dev/sass/04 - elements/_elements.codeblocks.scss
+++ b/dev/sass/04 - elements/_elements.codeblocks.scss
@@ -28,6 +28,7 @@ pre code {
 	padding:0;
 	margin:0;
 	border-radius:0;
+	white-space:normal;
 }
 
 @include bp(md) {
